# kappamin

./: .gitignore  CHANGELOG  Example_AsModule.py  Example_BvK.txt  Example_Cahill.txt  Example_Debye.txt  ExecuteScript.py  README.md  kappamin.py  setup.cfg  setup.py
