[metadata]
name = kappamin
version = 0.0.1
url = https://github.com/JianboHIT/kappamin
author = Jianbo, ZHU
description = A python3 code for calculations of the minimum limit to thermal conductivity
long_description = file: README.md
keywords = thermal-conductivity, limitation, condensed-matter-physics, phonon-transport
license = Apache-2.0 license
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    License :: OSI Approved :: Apache Software License

[options]
py_modules=
    kappamin
install_requires =
    numpy
    scipy

